# Copyright 2025 Dell Inc. or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "dqubo"
version = "0.2.0"
description = "Dell tool for create QUBO programs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = ""
repository = "https://github.com/python-poetry/poetry"
documentation = "https://python-poetry.org/docs/"

[tool.poetry.dependencies]
python = "~3.12"
scipy = "~1.11"
nest_asyncio = "^1.6.0"
numpy = "1.26.2"
pyparsing = "^3.2.1"
dwave-neal = {version = "^0.6.0", optional = true}
openjij = {version = "^0.9.2", optional = true}
jij-cimod = {version = "^1.6.2", optional = true}
dimod = {version = "^0.12.19", optional = true}
dwave-samplers = {version = "^1.4.0", optional = true}
cython = "^3.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "~4.1"
pyqubo = "~1.5"

[tool.poetry.extras] 
dwave = ["dwave-neal", "dimod", "dwave-samplers"]
openjij = ["openjij", "jij-cimod"]

[tool.coverage.run]
branch = true
omit = [
    "*/base.py",
# omit __init__ files
    "__init__.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
